--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -68,14 +68,14 @@ body{
     }
 
     .status{
-        padding: 1px 10px;
+        padding: 1px 8px;
         border-radius: 20px;
+        font-weight: 600;
     }
 
     .active-status{
-        background-color: #49dc9ce6;
-        color: #fff;
-        border: 1px solid #85f3ce;
+        background-color: #b8f1d8e6;
+        color: #1f9073;
     }
 
     .inactive-status{
