--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -94,9 +94,22 @@
                         border: 2px solid $inactive;
                     }
 
-                    .username-info{
+                    .user-detail{
                         margin-right: 10px;
-                        font-weight: 500;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: flex-end;
+
+                        .user{
+                            font-weight: 600;
+                            color: $toolbar;
+                        }
+
+                        .email{
+                            font-weight: 500;
+                            color: $default;
+                            font-size: .9em;
+                        }
                     }
                 }
 
