fixed modal button

--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -102,12 +102,14 @@
                         .user{
                             font-weight: 600;
                             color: $toolbar;
+                            position: relative;
+                            top: 3px;
                         }
 
                         .email{
-                            font-weight: 500;
+                            font-weight: normal;
                             color: $default;
-                            font-size: .9em;
+                            font-size: .8em;
                         }
                     }
                 }
