new templates added

--- a/resources/sass/_my_account.scss
+++ b/resources/sass/_my_account.scss
@@ -131,6 +131,7 @@
             h5{
                 color: $toolbar;
                 font-weight: 500;
+                margin-bottom: 15px;
             }
 
             .input-group{
