--- a/resources/sass/_content.scss
+++ b/resources/sass/_content.scss
@@ -54,6 +54,7 @@
         h5{
             font-weight: 500;
             color: $toolbar;
+            margin-bottom: 20px;
         }
 
         .input-group{
