added order statuses

--- a/resources/sass/_modal.scss
+++ b/resources/sass/_modal.scss
@@ -43,7 +43,7 @@
 				width: 50px;
 				border-radius: 50%;
 				padding: 10px;
-				background-color: pink;
+				background-color: #EA203411;
 				color: $red;
 
 				.feather{
