--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -74,8 +74,8 @@ body{
     }
 
     .active-status{
-        background-color: #b8f1d8e6;
-        color: #1f9073;
+        background-color: #00e39611;
+        color: $green;
     }
 
     .inactive-status{
