--- a/resources/sass/_auth.scss
+++ b/resources/sass/_auth.scss
@@ -61,6 +61,7 @@
             h5{                
                 color: $toolbar;
                 font-weight: 500;
+                margin-bottom: 15px;
             }
 
             #login-form{
