--- a/resources/sass/_auth.scss
+++ b/resources/sass/_auth.scss
@@ -138,16 +138,17 @@
                 }
 
                 .btn-auth{
-                    padding: 10px !important;
-                    color: #fff;
-                    background-color: $btn-primary;
-                    transition: all 0.4s ease;
+                    margin-right: 5px;
+                    border-radius: 5px;
                     font-family: $font-family;
                     font-size: .9em;
                     font-weight: 500;
+                    transition: all 0.4s ease;
+                    color: #fff;
+                    background-color: $btn-primary;
 
-                    &:hover{
-                        opacity: 0.8;
+                    &:last-child{
+                        margin-right: 0;
                     }
                 }
 
