--- a/resources/sass/_content.scss
+++ b/resources/sass/_content.scss
@@ -6,7 +6,7 @@
 
     #myGrid{
         width: 100%;
-        height: 80vh;
+        height: 100vh;
     }
     
     .data-profile{
@@ -30,10 +30,11 @@
 
     .btn-edit,
     .btn-remove{
-        width: 38px;
-        padding: 7px;
-        border-radius: 4px;
+        width: 34px;
+        height: 34px;
+        border-radius: 5px;
         color: #fff;
+        padding: 0;
     }
 
     .btn-edit{
@@ -70,37 +71,11 @@
                 margin-bottom: 5px;
             }
 
-            .columns{
-                display: grid;
-                grid-template-columns: 60% 22% 8%;
-                grid-column-gap: 10px;
-                align-items: center;
-                margin-bottom: 20px;
-
-                .form-control{
-                    margin-right: 20px;
-                    flex: 0;
-
-                    &:last-child{
-                        margin-right: 0;
-                    }
-                }
-
-                .btn-plus{
-                    color: #fff;
-                    background-color: $btn-primary;
-                }
-
-                &:last-child{
-                    margin-bottom: 0;
-                }
-            }
-
             .form-control{
                 outline: none;
-                border-radius: 4px;
                 font-weight: 500;
                 font-size: .9em;
+                border-radius: 4px;
                 transition: all 0.3s ease;
                 resize: none;
                 width: 100% !important;
@@ -129,6 +104,14 @@
                 }
             }
 
+            .btn-plus{
+                color: #fff;
+                background-color: $btn-primary;
+                font-size: .9em;
+                font-weight: 500;
+                border-radius: 5px;
+            }
+
             .invalid-feedback{
                 strong{
                     color: $red;
@@ -152,10 +135,7 @@
 
             button{
                 margin-right: 5px;
-                padding: 10px 20px;
-                border: none;
-                outline: none;
-                border-radius: 4px;
+                border-radius: 5px;
                 font-family: $font-family;
                 font-size: .9em;
                 font-weight: 500;
