--- a/resources/sass/_filters.scss
+++ b/resources/sass/_filters.scss
@@ -9,13 +9,12 @@
         display: flex;
         align-items: center;
 
-        a{
-            padding: 10px 20px;
+        button{
             color: #fff;
             font-size: 0.9em;
             font-weight: 500;
             margin-right: 5px;
-            border-radius: 4px;
+            border-radius: 5px;
 
             .download-icon{
                 margin-left: 5px;
@@ -30,7 +29,7 @@
             background-color: $default;
         }
 
-        .form-group{
+        .search-group{
             margin-right: 8px;
             margin-bottom: 0 !important;
             padding: 0 10px;
@@ -38,6 +37,7 @@
             border: 1px solid transparent;
             box-shadow: $shadow;
             background-color: #fff;
+            display: flex;
 
             input{
                 outline: none;
@@ -61,10 +61,7 @@
 
         select{
             margin-right: 8px;
-            padding: 10px;
-            outline: none;
             border: 1px solid transparent;
-            border-radius: 4px;
             box-shadow: $shadow;
             font-weight: 500;
             font-size: .9em;
