--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -84,8 +84,8 @@ body{
     }
 
     .is-below-minimum{
-        background-color: $gold;
-        color: #fff;
+        background-color: #feb01911;
+        color: $gold;
     }
     
     .auth-container{
