--- a/resources/sass/_admin.scss
+++ b/resources/sass/_admin.scss
@@ -489,7 +489,7 @@ main{
     .content,
     .dashboard-container,
     .dashboard-content,
-    .customer-content{
+    .user-container{
         margin: 0 30px;
     }
 }
