--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -1,17 +1,16 @@
 .header-content{
     display: flex;
     flex-direction: column;
-    margin: 20px 30px;
+    // margin: 20px 30px;
 
     nav{
         padding: 15px 20px;
-        box-shadow: $shadow;
         background-color: #fff;
         display: flex;
         justify-content: space-between;
         align-items: center;
         position: relative;
-        border-radius: 4px;
+        border-bottom: 1px solid #f3f3f3;
 
         .date-time{
             display: flex;
@@ -32,126 +31,56 @@
             align-items: center;
             justify-content: flex-end;
 
-            .notifications{
-                list-style: none;
-                display: flex;
-                align-items: center;
-                margin-right: 15px;
-                display: none;
-
-                li{
-                    margin: 10px;
-
-                    a{
-                        text-decoration: none;
-                        color: $toolbar;
-                        display: flex;
-                        justify-content: center;
-                        position: relative;
-
-                        .new-notifications{
-                            color: $red;
-                            font-size: .5em;
-                            position: aboslute;
-                            bottom: 0;
-                        }
-
-                        .feather{
-                            width: 20px;
-                            height: 20px;
-                        }
-
-                        &:active{
-                            color: $btn-primary;
-                        }
-                    }
-                }
-            }
-
-            a.btn-dropdown{
+            .btn-dropdown{
                 color: $toolbar;
                 text-decoration: none;
                 font-weight: 600;
                 font-size: .9em;
                 display: flex;
                 align-items: center;
-
-                .username{
-                    text-align: right;
-                    display: flex;
-                    align-items: center;
-                    overflow: hidden;
-
-                    .image-wrapper{
-                        border-radius: 50%;
-                        width: 40px;
-                        height: 40px;
-                        background-color: #eee;
-                        background-size: cover;
-                        background-position: center;
-                        overflow: hidden;
-                        border: 2px solid $inactive;
-                        margin-right: 10px;
-                    }
-
-                    .user-detail{
-                        display: flex;
-                        flex-direction: column;
-                        text-align: left;
-
-                        .user{
-                            font-weight: 600;
-                            color: $toolbar;
-                            position: relative;
-                            top: 3px;
-                        }
-
-                        .email{
-                            font-weight: normal;
-                            color: $default;
-                            font-size: .8em;
-                        }
-                    }
-                }
+                background-size: cover;
+                height: 42px;
+                width: 42px;
             }
 
-            .admin-dropdown{
-                z-index: 1;
-                position: absolute;
-                top: 60px;
-                right: 15px;
-                background-color: #fff;
-                box-shadow: $shadow;
-                border-radius: 4px;
-                overflow: hidden;
-                max-height: 0;                
-                transition: all .2s ease;
+            .dropdown-menu{
+                box-shadow: $dropDown-shadow !important;
+                border-radius: $radius !important;
+                border: none !important;
+                padding: 15px 0;
 
-                ul{
-                    list-style: none;
-                    
-                    li{
-                        display: flex;
-                        flex-direction: column;
+                .dropdown-item{
+                    color: $toolbar;
+                    outline: none !important;
+                    font-size: .9em !important;
+                    color: $toolbar !important;
 
-                        a{
-                            padding: 10px 20px;
-                            padding-right: 35px;
-                            text-decoration: none;
-                            color: $toolbar;
-                            font-weight: 500;
-                            font-size: .9em;
-                            display: flex;
-                            align-items: center;
+                    &:active{
+                        color: $toolbar;
+                    }
+                }
 
-                            span{
-                                margin-left: 10px;
-                            }
+                .profile-image{
+                    display: flex;
+                    align-items: center;
+                    background-size: cover;
+                    height: 40px;
+                    width: 40px;
+                }
 
-                            &:hover{
-                                background-color: $primary;
-                            }
-                        }
+                .profile-info{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: start;
+
+                    #user-name{
+                        color: $toolbar;
+                        font-size: .9em;
+                    }
+
+                    #user-email{
+                        color: $default;
+                        font-size: .8em;
                     }
                 }
             }
