--- a/resources/sass/_content.scss
+++ b/resources/sass/_content.scss
@@ -1,12 +1,14 @@
 .content{
     background-color: #fff;
-    box-shadow: $shadow;
-    border-radius: 4px;
     overflow: hidden;
 
     #myGrid{
+        overflow: hidden;
         width: 100%;
         height: 100vh;
+        border: $border;
+        box-shadow: $shadow;
+        border-radius: $radius;
     }
     
     .data-profile{
@@ -48,7 +50,9 @@
     .card-form{
         padding: 20px;
         background-color: #fff;
+        border: $border;
         box-shadow: $shadow;
+        border-radius: $radius;
         overflow: hidden;
         text-align: left;
 
@@ -141,6 +145,7 @@
                 font-weight: 500;
                 transition: all 0.4s ease;
                 color: #fff;
+                padding: 8px 15px;
 
                 &:last-child{
                     margin-right: 0;
