--- a/resources/sass/_dashboard.scss
+++ b/resources/sass/_dashboard.scss
@@ -18,10 +18,11 @@
             grid-gap: 20px;
 
             .reports{
-                box-shadow: $shadow;
+                border: .0625rem solid rgba(231,234,243,.7);
+                box-shadow: 0 6px 12px rgba(140,152,164,.075);
                 overflow: hidden;
                 padding: 20px;
-                border-radius: 4px;
+                border-radius: .75rem;
                 background-color: #fff;
 
                 .report-record{
@@ -32,7 +33,8 @@
                     .card-total{
                         color: $toolbar;
                         font-weight: 600;
-                        font-size: 1.8em;
+                        font-size: 1.4em;
+                        font-style: uppercase;
                     }
 
                     .card-icon{
@@ -42,25 +44,30 @@
                         align-items: center;
                         justify-content: center;
                         padding: 12px;
+
+                        .feather{
+                            height: 24px;
+                            width: 24px;
+                        }
                     }
 
                     #sales-icon{
-                        background-color: #00e39633;
+                        background-color: #00e39611;
                         color: #00e396;
                     }
 
                     #expenses-icon{
-                        background-color: #ff456033;
+                        background-color: #ff456011;
                         color: #ff4560;   
                     }                        
 
                     #order-icon{
-                        background-color: #feb01933;
+                        background-color: #feb01911;
                         color: #feb019;
                     }
 
                     #customer-icon{
-                        background-color: #775dd033;
+                        background-color: #775dd011;
                         color: #775dd0;
                     }
                 }
@@ -69,10 +76,11 @@
         }
 
         .exp-vs-sales{
-            box-shadow: $shadow;
+            border: .0625rem solid rgba(231,234,243,.7);
+            box-shadow: 0 6px 12px rgba(140,152,164,.075);
             overflow: hidden;
             padding: 20px;
-            border-radius: 4px;
+            border-radius: .75rem;
             background-color: #fff;
 
             h4{
@@ -93,10 +101,11 @@
 
             .details1,
             .details2{
-                box-shadow: $shadow;
+                border: .0625rem solid rgba(231,234,243,.7);
+                box-shadow: 0 6px 12px rgba(140,152,164,.075);
                 overflow: hidden;
                 padding: 20px;
-                border-radius: 4px;
+                border-radius: .75rem;
                 background-color: #fff;
             }
 
