--- a/resources/sass/_filters.scss
+++ b/resources/sass/_filters.scss
@@ -15,6 +15,7 @@
             font-weight: 500;
             margin-right: 5px;
             border-radius: 5px;
+            padding: 8px 15px;
 
             .download-icon{
                 margin-left: 5px;
@@ -32,10 +33,9 @@
         .search-group{
             margin-right: 8px;
             margin-bottom: 0 !important;
-            padding: 0 10px;
+            padding: 0px 10px;
             border-radius: 4px;
-            border: 1px solid transparent;
-            box-shadow: $shadow;
+            border: 1px solid #f3f3f3;
             background-color: #fff;
             display: flex;
 
@@ -43,7 +43,7 @@
                 outline: none;
                 border: none;
                 background-color: transparent;
-                padding: 10px;                
+                padding: 8px 10px;
                 font-weight: 500;
                 font-size: .9em;
                 transition: all 0.3s ease;
@@ -55,21 +55,18 @@
 
             &:focus-within{
                 border: 1px solid $btn-primary;
-                box-shadow: $shadow;
             }
         }
 
         select{
             margin-right: 8px;
-            border: 1px solid transparent;
-            box-shadow: $shadow;
+            border: $border;
             font-weight: 500;
             font-size: .9em;
             transition: all 0.3s ease;
 
             &:focus{
                 border: 1px solid $btn-primary;
-                box-shadow: $shadow;
             }
 
             &:last-child{
