--- a/resources/sass/_sidebar.scss
+++ b/resources/sass/_sidebar.scss
@@ -3,7 +3,8 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    box-shadow: $shadow;
+    border-right: 1px solid #f3f3f3;
+    // box-shadow: $shadow;
     background-color: #fff;
     width: 20%;
 
@@ -39,7 +40,7 @@
                 color: $toolbar;
                 font-size: .9em;
                 font-weight: 500;
-                padding: 10px 0;
+                padding: 8px 0;
                 margin: 0 15px;
                 flex: 1;
                 border-radius: 4px;
@@ -50,7 +51,7 @@
                 background-color: #fff;
 
                 .awesome2{
-                    font-size: .7em !important;
+                    font-size: .5em !important;
                 }
 
                 span{
@@ -65,13 +66,11 @@
                 }
 
                 &:hover{
-                    background-color: $primary;
-                    color: $toolbar;
+                    color: $btn-primary;
                 }
 
                 &:active{
-                    background-color: $btn-primary;
-                    color: #fff;
+                    color: $toolbar;
                 }
             }
 
